test_suite5/ALAN/test_suite/alan-2022-examples/failing/001320_mutation.alan
source Z3 begin call X() leave end
